fixed more overflow issues and cleaned up contact page.

--- a/src/global.css
+++ b/src/global.css
@@ -66,10 +66,6 @@
     hsla(0, 0%, 25%, 1) 0%,
     hsla(0, 0%, 15%, 1) 100%
   );
-  /* --mobileGradient: linear-gradient(
-    to bottom,
-    hsla(38, 58%, 90%, 1),
-  ); */
   /* !  FONTS */
   --serifFont: 'Playfair Display';
   --sansFont: 'Inter';
@@ -78,7 +74,7 @@
   --ctaMobilePad: 0.5rem 0.75rem;
   --ctaTabletPad: 1.5rem 1.5rem;
   --ctaPad: 1.25rem 2.25rem;
-  --borderRadius: 4px;
+  --borderRadius: 6px;
 
   /* !  SHADOWS */
   --btnShadow: 0 0.5px 10px rgba(0, 0, 0, 0.05), 1px 1px 10px rgba(0, 0, 0, 0.1);
